# calvinite

./: Cargo.toml  README.md  build.rs
proto/calvinite/: calvinite.proto
src/: client.rs  common.rs  executor.rs  lib.rs  lock_manager.rs  main.rs  scheduler.rs  scheduler_old.rs  sequencer.rs  stmt_analyzer.rs
src/executor/: mod.rs  peer.rs
src/scheduler/: lock_manager.rs  mod.rs
src/sequencer/: mod.rs
tests/: common.rs  e2e_test.rs
