[package]
name = "calvinite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.2"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
anyhow = "1.0"
sqlparser = "0.14.0"
sled = "0.34.7"
tempfile = "3"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
bytes = "1.1.0"
thiserror = "1.0"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
faux = "^0.1"

[build-dependencies]
tonic-build = "0.6"